--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -1,31 +1,4 @@
-<div>
-    <form [formGroup]="AdForm" >
-        <!-- (selectionChange)="modo($event.value)" -->
-        <mat-select  formControlName="schedule" style="width: 100px;"(selectionChange)="addForm($event.value)">
-            <mat-option *ngFor="let schedule of schedules" [value]="schedule.value">
-              {{schedule.viewValue}}
-            </mat-option>
-          </mat-select>
-      <!-- <input type="text" name="name" formControlName="schedule"> -->
 
-      <div *ngIf="AdForm.controls['schedule'].touched">
-        <div formGroupName="secondaryForm" *ngIf="select=='1'">
-            <input type="text" name="id" formControlName="title">
-            <input type="text" name="name" formControlName="desc">
-         </div>
-
-         <div formGroupName="secondaryForm" *ngIf="select=='3'">
-            <input type="text" name="id" formControlName="date" >
-            <input type="text" name="name" formControlName="from">
-            <input type="text" name="name" formControlName="to">
-         </div>
-
-
-      </div>
-
-      <button class="btn btn-primary">send</button>
-    </form>
-  </div>
 
   <div class="container my-2">
     <div class="row">
@@ -50,7 +23,7 @@
                             </div>
                             <!-- now -->
 
-                            <div   formGroupName="secondaryForm"   class="col-12" *ngIf="AdForm.controls['schedule'].touched && select=='1'">
+                            <div   formGroupName="secondaryForm"   class="col-12" *ngIf="AdForm.controls['schedule'].touched && select=='now'">
 
                                 <mat-form-field appearance="outline" class="w-100">
                                     <mat-label>العنوان</mat-label>
@@ -67,6 +40,7 @@
                                     <div class="custom-file my-5">
                                         <input
                                           #fileImage
+                                          (change)="handleFileInput($event,0)"
                                           accept="image/png,image/jpeg,image/jpg,image/gif,video/mp4,video/x-m4v,video/*"
                                           aria-describedby="Upload Photo Or Video"
                                           class="d-none"
@@ -97,7 +71,7 @@
                             <!-- end of now -->
 
                             <!-- schedule -->
-                            <div   formGroupName="secondaryForm"   class="col-12" *ngIf="AdForm.controls['schedule'].touched && select=='2'">
+                            <div   formGroupName="secondaryForm"   class="col-12" *ngIf="AdForm.controls['schedule'].touched && select=='schedule'">
 
                                 <mat-form-field appearance="outline" class="w-100">
                                     <mat-label>التاريخ</mat-label>
@@ -127,6 +101,8 @@
                                     <div class="custom-file my-5">
                                         <input
                                           #fileImage
+                                          (change)="handleFileInput($event,0)"
+                                          
                                           accept="image/png,image/jpeg,image/jpg,image/gif,video/mp4,video/x-m4v,video/*"
                                           aria-describedby="Upload Photo Or Video"
                                           class="d-none"
@@ -156,42 +132,72 @@
                             </div>
                             <!-- end of schedule -->
                               <!-- schedule -->
-                            <div   formGroupName="secondaryForm"   class="col-12" *ngIf="AdForm.controls['schedule'].touched && select=='3'">
+                            <div   formGroupName="secondaryForm"   class="col-12" *ngIf="AdForm.controls['schedule'].touched && select=='custom'">
 
                                 <div class="row">
 
     
+                                  <div class="col-12">
                                     <mat-form-field appearance="outline" class="w-100">
-                                        <mat-label>الوقت</mat-label>
-                                        <input formControlName="time" matInput
-                                            placeholder="الوقت" type="text"/>
+                                      <mat-label>تاريخ إرسال النوتيفكشن</mat-label>
+                                      <input
+                    
+                                        [ngxTimepicker]="picker3"
+                                        formControlName="time" matInput>
+                                      <ngx-material-timepicker-toggle [for]="picker3" matSuffix></ngx-material-timepicker-toggle>
+                                      <ngx-material-timepicker #picker3 [theme]="darkTheme"></ngx-material-timepicker>
                                     </mat-form-field>
+                                  </div>
 
-                                    <mat-form-field appearance="outline" class="w-100">
-                                        <mat-label>تاريخ انتهاء الإعلان</mat-label>
-                                        <input (focus)="picker.open()" [matDatepicker]="picker"(dateInput)="fromTo($event.value)"
+                                    <mat-form-field appearance="outline" class="w-50">
+                                        <mat-label>تاريخ البدئ الإعلان</mat-label>
+                                        <input (focus)="picker.open()" [matDatepicker]="picker"(dateInput)="fromTo($event.value,'0')"
                                                 formControlName="from" matInput>
                                         <mat-datepicker-toggle [for]="picker" matSuffix></mat-datepicker-toggle>
                                         <mat-datepicker #picker></mat-datepicker>
                                     </mat-form-field>
+                                    
+                      
 
-                                    <mat-form-field appearance="outline" class="w-100">
-                                        <mat-label>تاريخ البدئ الإعلان</mat-label>
-                                        <input (focus)="picker2.open()" [matDatepicker]="picker2" (dateInput)="fromTo($event.value)"
+                                    <!-- <mat-form-field appearance="outline" class="w-100">
+                                      <mat-label> ايام الاسبوع</mat-label>
+
+                                      <mat-radio-group formControlName="days" matInput>
+                                        <mat-radio-button *ngFor="let day of weekday" checked=true  value="{{1}}">{{day}}</mat-radio-button>
+                                      </mat-radio-group>
+                  
+                                  </mat-form-field> -->
+
+                                    <mat-form-field appearance="outline" class="w-50">
+                                        <mat-label>تاريخ انتهاء الإعلان</mat-label>
+                                        <input (focus)="picker2.open()" [matDatepicker]="picker2" (dateInput)="fromTo('0',$event.value)"
                                                 formControlName="to" matInput>
                                         <mat-datepicker-toggle [for]="picker2" matSuffix></mat-datepicker-toggle>
                                         <mat-datepicker #picker2></mat-datepicker>
                                     </mat-form-field>
 
+                                    <div class="w-100">
+                                      <!-- <div *ngFor="let day of weekday"  >
+                                        <mat-checkbox   formControlName="days" [value]="day">{{day}}</mat-checkbox >
 
-    
+                                      </div> -->
 
-    
+                                      <div  style="display: inline-block;" formArrayName="days" *ngFor="let value of weekday; let i = index">
+                                        <!-- <mat-checkbox ctype="checkbox" [value]="value"  (change)="onCheckboxChange($event)" >{{value}}  </mat-checkbox> -->
+
+                                        <input type="checkbox" [value]="value"  (change)="onCheckboxChange($event)" >
+                                        {{value}}  
+                                      </div>
+
+
+                                    </div>
 
     
                                 </div>
+
                                 <ng-container formArrayName="ads"  >
-                                    <ng-container *ngFor="let adminForm of ads.controls; let index = index">
+                                    <ng-container *ngFor="let ad of customAdstest.controls; let index = index">
+                                      <P >{{ad.controls.date.value}} / {{ad.controls.day.value}}</P>
 
                                         <div [formGroupName]="index" class="row">
                                             <mat-form-field appearance="outline" class="col-4">
@@ -210,7 +216,7 @@
                                                     <input
                                                     #fileImage
                                                     (change)="handleFileInput($event, index)"
-
+                                                    formControlName="file"
                                                     accept="image/png,image/jpeg,image/jpg,image/gif,video/mp4,video/x-m4v,video/*"
                                                     aria-describedby="Upload Photo Or Video"
                                                     class="d-none"
@@ -234,44 +240,111 @@
                                                     </button>
                                                 </div>
                                             </div>
-            
+      
                                         </div>
                                     </ng-container>
                                 </ng-container>
 
 
 
-                                <div class="col-12 text-center">
-                                    <div class="custom-file my-5">
-                                        <input
-                                        #fileImage
-                                        accept="image/png,image/jpeg,image/jpg,image/gif,video/mp4,video/x-m4v,video/*"
-                                        aria-describedby="Upload Photo Or Video"
-                                        class="d-none"
-                                        type="file"/>
-                                        <button (click)="fileImage.click()"
-                                                class="w-50"
-                                                color="primary"
-                                                mat-stroked-button
-                                                type="button">
-                                        رفع صورة او فيديو للإعلان
-                                        <svg enable-background="new 0 0 24 24" fill=" #1f6b00" height="24px"
-                                            viewBox="0 0 24 24" width="24px" xmlns="http://www.w3.org/2000/svg">
-                                            <g>
-                                            <rect fill="none" height="24" width="24"/>
-                                            </g>
-                                            <g>
-                                            <path
-                                                d="M18,15v3H6v-3H4v3c0,1.1,0.9,2,2,2h12c1.1,0,2-0.9,2-2v-3H18z M7,9l1.41,1.41L11,7.83V16h2V7.83l2.59,2.58L17,9l-5-5L7,9z"/>
-                                            </g>
-                                        </svg>
-                                        </button>
-                                    </div>
-                                </div>
 
                            
 
                             </div>
+
+                            <div   formGroupName="secondaryForm"   class="col-12" *ngIf="AdForm.controls['schedule'].touched && select=='daily'">
+
+                              <div class="row">
+
+  
+                                <div class="col-12">
+                                  <mat-form-field appearance="outline" class="w-100">
+                                    <mat-label>تاريخ إرسال النوتيفكشن</mat-label>
+                                    <input
+                  
+                                      [ngxTimepicker]="picker4"
+                                      formControlName="time" matInput>
+                                    <ngx-material-timepicker-toggle [for]="picker4" matSuffix></ngx-material-timepicker-toggle>
+                                    <ngx-material-timepicker #picker4 [theme]="darkTheme"></ngx-material-timepicker>
+                                  </mat-form-field>
+                                </div>
+                                  
+
+                                  <mat-form-field appearance="outline" class="w-50">
+                                      <mat-label>تاريخ البدئ الإعلان</mat-label>
+                                      <input (focus)="picker.open()" [matDatepicker]="picker"(dateInput)="fromTo($event.value,'0')"
+                                              formControlName="from" matInput>
+                                      <mat-datepicker-toggle [for]="picker" matSuffix></mat-datepicker-toggle>
+                                      <mat-datepicker #picker></mat-datepicker>
+                                  </mat-form-field>
+                                  
+
+
+
+                                  <mat-form-field appearance="outline" class="w-50">
+                                      <mat-label>تاريخ انتهاء الإعلان</mat-label>
+                                      <input (focus)="picker2.open()" [matDatepicker]="picker2" (dateInput)="fromTo('0',$event.value)"
+                                              formControlName="to" matInput>
+                                      <mat-datepicker-toggle [for]="picker2" matSuffix></mat-datepicker-toggle>
+                                      <mat-datepicker #picker2></mat-datepicker>
+                                  </mat-form-field>
+  
+                              </div>
+      
+                              <ng-container formArrayName="ads"  >
+                                <ng-container *ngFor="let ad of dailyAdsTest.controls; let i = index">
+                                    <P >{{ad.controls.date.value}} / {{ad.controls.day.value}}</P>
+                                     <div [formGroupName]="i" class="row">
+                                        <mat-form-field appearance="outline" class="col-4">
+                                            <mat-label>العنوان</mat-label>
+                                            <input formControlName="title" matInput
+                                                placeholder="الوصف" type="text"/>
+                                        </mat-form-field>
+
+                                        <mat-form-field appearance="outline" class="col-4">
+                                            <mat-label>الوصف</mat-label>
+                                            <input formControlName="desc" matInput
+                                                placeholder="الوصف" type="text"/>
+                                        </mat-form-field>
+                                        <div class="col-4 text-center">
+                                            <div class="custom-file">
+                                                <input
+                                                #fileImage
+                                                (change)="handleFileInput($event, i)"
+                                                formControlName="file"
+                                                accept="image/png,image/jpeg,image/jpg,image/gif,video/mp4,video/x-m4v,video/*"
+                                                aria-describedby="Upload Photo Or Video"
+                                                class="d-none"
+                                                type="file"/>
+                                                <button (click)="fileImage.click()"
+                                                        class="w-50"
+                                                        color="primary"
+                                                        mat-stroked-button
+                                                        type="button">
+                                                رفع صورة او فيديو للإعلان
+                                                <svg enable-background="new 0 0 24 24" fill=" #1f6b00" height="24px"
+                                                    viewBox="0 0 24 24" width="24px" xmlns="http://www.w3.org/2000/svg">
+                                                    <g>
+                                                    <rect fill="none" height="24" width="24"/>
+                                                    </g>
+                                                    <g>
+                                                    <path
+                                                        d="M18,15v3H6v-3H4v3c0,1.1,0.9,2,2,2h12c1.1,0,2-0.9,2-2v-3H18z M7,9l1.41,1.41L11,7.83V16h2V7.83l2.59,2.58L17,9l-5-5L7,9z"/>
+                                                    </g>
+                                                </svg>
+                                                </button>
+                                            </div>
+                                        </div>
+  
+                                    </div> 
+                                </ng-container>
+                            </ng-container>
+
+
+
+                         
+
+                          </div>  
                               <!-- end of schedule -->    
                               <div class="col-12 text-center">
                                 <button
