--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -55,33 +55,68 @@
                                     </mat-radio-group>
                                   </div>
 
+
                                   <div class="col-12 text-center">
+                                    <div *ngIf="AllFiles.length>0" class="row my-2 justify-content-center align-items-start">
+                                      <h4 class="our-text-primary">صورة / فيديو الإعلان</h4>
+                                      <ng-container *ngFor="let file of AllFiles">
+                                        <div *ngIf="file.file?.type | appIncludes: 'video/'" class="col-6 col-md-3 my-2">
+                                          <div class="d-flex justify-content-center align-items-center flex-column">
+                                            <video controls height="300px" width="300px">
+                                              <source [src]="file?.fileResult" type="video/mp4">
+                                              <source [src]="file?.fileResult" type="video/ogg">
+                                              المتصفح الخاص بك لا يدعم تشغيل الفيديوهات
+                                            </video>
+                                            <button
+                                              (click)="removeFile2(file.name)"
+                                              class="mt-2" color="warn" mat-stroked-button type="button">
+                                              حدف الفيديو
+                                              <mat-icon>delete</mat-icon>
+                                            </button>
+                                          </div>
+                                        </div>
+                                        <div *ngIf="file?.file?.type  | appIncludes: 'image/'" class="col-6 col-md-3 my-2">
+                                          <div class="d-flex justify-content-center align-items-center flex-column">
+                                            <img [src]="file.fileResult" alt="" class="img-fluid" height="175px" width="175px">
+                                            <button
+                                              (click)="removeFile2(file.name)"
+                                              class="mt-2"
+                                              color="warn"
+                                              mat-stroked-button
+                                              type="button">
+                                              حدف الصورة
+                                              <mat-icon>delete</mat-icon>
+                                            </button>
+                                          </div>
+                                        </div>
+                                      </ng-container>
+                                    </div>
                                     <div class="custom-file my-5">
-                                        <input
-                                          #fileImage
-                                          (change)="handleFileInput($event,0)"
-                                          accept="image/png,image/jpeg,image/jpg,image/gif,video/mp4,video/x-m4v,video/*"
-                                          aria-describedby="Upload Photo Or Video"
-                                          class="d-none"
-                                          type="file"/>
-                                        <button (click)="fileImage.click()"
-                                                class="w-50"
-                                                color="primary"
-                                                mat-stroked-button
-                                                type="button">
-                                          رفع صورة او فيديو للإعلان
-                                          <svg enable-background="new 0 0 24 24" fill=" #1f6b00" height="24px"
-                                               viewBox="0 0 24 24" width="24px" xmlns="http://www.w3.org/2000/svg">
-                                            <g>
-                                              <rect fill="none" height="24" width="24"/>
-                                            </g>
-                                            <g>
-                                              <path
-                                                d="M18,15v3H6v-3H4v3c0,1.1,0.9,2,2,2h12c1.1,0,2-0.9,2-2v-3H18z M7,9l1.41,1.41L11,7.83V16h2V7.83l2.59,2.58L17,9l-5-5L7,9z"/>
-                                            </g>
-                                          </svg>
-                                        </button>
-                                      </div>
+                                      <input
+                                        #fileImage
+                                        (change)="handleFileInput($event,0)"
+                                        accept="image/png,image/jpeg,image/jpg,image/gif,video/mp4,video/x-m4v,video/*"
+                                        aria-describedby="Upload Photo Or Video"
+                                        class="d-none"
+                                        type="file"/>
+                                      <button (click)="fileImage.click()"
+                                              class="w-50"
+                                              color="primary"
+                                              mat-stroked-button
+                                              type="button">
+                                        رفع صورة او فيديو للإعلان
+                                        <svg enable-background="new 0 0 24 24" fill=" #1f6b00" height="24px"
+                                             viewBox="0 0 24 24" width="24px" xmlns="http://www.w3.org/2000/svg">
+                                          <g>
+                                            <rect fill="none" height="24" width="24"/>
+                                          </g>
+                                          <g>
+                                            <path
+                                              d="M18,15v3H6v-3H4v3c0,1.1,0.9,2,2,2h12c1.1,0,2-0.9,2-2v-3H18z M7,9l1.41,1.41L11,7.83V16h2V7.83l2.59,2.58L17,9l-5-5L7,9z"/>
+                                          </g>
+                                        </svg>
+                                      </button>
+                                    </div>
                                   </div>
 
 
@@ -132,7 +167,7 @@
                                     </mat-radio-group>
                                   </div>
 
-                                  <div class="col-12 text-center">
+                                  <!-- <div class="col-12 text-center">
                                     <div class="custom-file my-5">
                                         <input
                                           #fileImage
@@ -160,6 +195,68 @@
                                           </svg>
                                         </button>
                                       </div>
+                                  </div> -->
+                                  <div class="col-12 text-center">
+                                    <div *ngIf="AllFiles.length>0" class="row my-2 justify-content-center align-items-start">
+                                      <h4 class="our-text-primary">صورة / فيديو الإعلان</h4>
+                                      <ng-container *ngFor="let file of AllFiles">
+                                        <div *ngIf="file.file?.type | appIncludes: 'video/'" class="col-6 col-md-3 my-2">
+                                          <div class="d-flex justify-content-center align-items-center flex-column">
+                                            <video controls height="300px" width="300px">
+                                              <source [src]="file?.fileResult" type="video/mp4">
+                                              <source [src]="file?.fileResult" type="video/ogg">
+                                              المتصفح الخاص بك لا يدعم تشغيل الفيديوهات
+                                            </video>
+                                            <button
+                                              (click)="removeFile2(file.name)"
+                                              class="mt-2" color="warn" mat-stroked-button type="button">
+                                              حدف الفيديو
+                                              <mat-icon>delete</mat-icon>
+                                            </button>
+                                          </div>
+                                        </div>
+                                        <div *ngIf="file?.file?.type  | appIncludes: 'image/'" class="col-6 col-md-3 my-2">
+                                          <div class="d-flex justify-content-center align-items-center flex-column">
+                                            <img [src]="file.fileResult" alt="" class="img-fluid" height="175px" width="175px">
+                                            <button
+                                              (click)="removeFile2(file.name)"
+                                              class="mt-2"
+                                              color="warn"
+                                              mat-stroked-button
+                                              type="button">
+                                              حدف الصورة
+                                              <mat-icon>delete</mat-icon>
+                                            </button>
+                                          </div>
+                                        </div>
+                                      </ng-container>
+                                    </div>
+                                    <div class="custom-file my-5">
+                                      <input
+                                        #fileImage
+                                        (change)="handleFileInput($event,0)"
+                                        accept="image/png,image/jpeg,image/jpg,image/gif,video/mp4,video/x-m4v,video/*"
+                                        aria-describedby="Upload Photo Or Video"
+                                        class="d-none"
+                                        type="file"/>
+                                      <button (click)="fileImage.click()"
+                                              class="w-50"
+                                              color="primary"
+                                              mat-stroked-button
+                                              type="button">
+                                        رفع صورة او فيديو للإعلان
+                                        <svg enable-background="new 0 0 24 24" fill=" #1f6b00" height="24px"
+                                             viewBox="0 0 24 24" width="24px" xmlns="http://www.w3.org/2000/svg">
+                                          <g>
+                                            <rect fill="none" height="24" width="24"/>
+                                          </g>
+                                          <g>
+                                            <path
+                                              d="M18,15v3H6v-3H4v3c0,1.1,0.9,2,2,2h12c1.1,0,2-0.9,2-2v-3H18z M7,9l1.41,1.41L11,7.83V16h2V7.83l2.59,2.58L17,9l-5-5L7,9z"/>
+                                          </g>
+                                        </svg>
+                                      </button>
+                                    </div>
                                   </div>
 
 
@@ -174,7 +271,7 @@
     
                                   <div class="col-12">
                                     <mat-form-field appearance="outline" class="w-100">
-                                      <mat-label>تاريخ إرسال النوتيفكشن</mat-label>
+                                      <mat-label>وقت إرسال النوتيفكشن</mat-label>
                                       <input
                     
                                         [ngxTimepicker]="picker3"
@@ -271,7 +368,7 @@
                                              <ng-container>
                           
                                                <!-- * -->
-                                               <div *ngIf="ad.value.fileSource.file && ad.value.fileSource.file.type  | appIncludes: 'image/'" class="col-6 col-md-3 my-2">
+                                               <div *ngIf="ad.value.fileSource && ad.value.fileSource.type | appIncludes: 'image/'" class="col-6 col-md-3 my-2">
                                                 <div class="d-flex justify-content-center align-items-center flex-column">
                                                    <img [src]="ad.value.fileSource.fileSource" alt="" class="img-fluid" height="175px" width="175px">
                                                    <button
@@ -328,58 +425,6 @@
                                   </ng-container>
                               </ng-container>
   
-<!-- 
-                                <ng-container formArrayName="ads"  >
-                                    <ng-container *ngFor="let ad of customAdstest.controls; let index = index">
-                                      <P >{{ad.controls.date.value}} / {{ad.controls.day.value}}</P>
-
-                                        <div [formGroupName]="index" class="row">
-                                            <mat-form-field appearance="outline" class="col-4">
-                                                <mat-label>العنوان</mat-label>
-                                                <input formControlName="title" matInput
-                                                    placeholder="الوصف" type="text"/>
-                                            </mat-form-field>
-
-                                            <mat-form-field appearance="outline" class="col-4">
-                                                <mat-label>الوصف</mat-label>
-                                                <input formControlName="desc" matInput
-                                                    placeholder="الوصف" type="text"/>
-                                            </mat-form-field>
-                                            <div class="col-4 text-center">
-                                                <div class="custom-file">
-                                                    <input
-                                                    #fileImage
-                                                    (change)="handleFileInput($event, index)"
-                                                    formControlName="file"
-                                                    accept="image/png,image/jpeg,image/jpg,image/gif,video/mp4,video/x-m4v,video/*"
-                                                    aria-describedby="Upload Photo Or Video"
-                                                    class="d-none"
-                                                    type="file"/>
-                                                    <button (click)="fileImage.click()"
-                                                            class="w-50"
-                                                            color="primary"
-                                                            mat-stroked-button
-                                                            type="button">
-                                                    رفع صورة او فيديو للإعلان
-                                                    <svg enable-background="new 0 0 24 24" fill=" #1f6b00" height="24px"
-                                                        viewBox="0 0 24 24" width="24px" xmlns="http://www.w3.org/2000/svg">
-                                                        <g>
-                                                        <rect fill="none" height="24" width="24"/>
-                                                        </g>
-                                                        <g>
-                                                        <path
-                                                            d="M18,15v3H6v-3H4v3c0,1.1,0.9,2,2,2h12c1.1,0,2-0.9,2-2v-3H18z M7,9l1.41,1.41L11,7.83V16h2V7.83l2.59,2.58L17,9l-5-5L7,9z"/>
-                                                        </g>
-                                                    </svg>
-                                                    </button>
-                                                </div>
-                                            </div>
-      
-                                        </div>
-                                    </ng-container>
-                                </ng-container> -->
-
-
 
 
                            
@@ -393,7 +438,7 @@
   
                                 <div class="col-12">
                                   <mat-form-field appearance="outline" class="w-100">
-                                    <mat-label>تاريخ إرسال النوتيفكشن</mat-label>
+                                    <mat-label>وقت إرسال النوتيفكشن</mat-label>
                                     <input
                   
                                       [ngxTimepicker]="picker4"
@@ -467,7 +512,7 @@
                                            <ng-container>
                         
                                              <!-- * -->
-                                             <div *ngIf="ad.value.fileSource.file && ad.value.fileSource.file.type  | appIncludes: 'image/'" class="col-6 col-md-3 my-2">
+                                             <div *ngIf="ad.value.fileSource && ad.value.fileSource.type | appIncludes: 'image/'" class="col-6 col-md-3 my-2">
                                               <div class="d-flex justify-content-center align-items-center flex-column">
                                                  <img [src]="ad.value.fileSource.fileSource" alt="" class="img-fluid" height="175px" width="175px">
                                                  <button
@@ -548,3 +593,7 @@
   </div>
 
   
+
+  <ng-template #image>
+
+  </ng-template>
