--- a/src/app/modules/create-add/pages/notification/notification.component.html
+++ b/src/app/modules/create-add/pages/notification/notification.component.html
@@ -46,7 +46,7 @@
                                       class="d-flex justify-content-start align-items-start flex-column"
                                       color="primary"
                                       formControlName="isWeb">
-                                      <mat-radio-button [value]="1" class="example-radio-button mx-2 my-2">
+                                      <mat-radio-button [value]="1"[checked]="true"  sel class="example-radio-button mx-2 my-2">
                                         ويب سايت
                                       </mat-radio-button>
                                       <mat-radio-button [value]="0" class="example-radio-button mx-2 my-2">
@@ -171,7 +171,7 @@
                                       class="d-flex justify-content-start align-items-start flex-column"
                                       color="primary"
                                       formControlName="isWeb">
-                                      <mat-radio-button [value]="1" class="example-radio-button mx-2 my-2">
+                                      <mat-radio-button [value]="1" [checked]="true" class="example-radio-button mx-2 my-2">
                                         ويب سايت
                                       </mat-radio-button>
                                       <mat-radio-button [value]="0" class="example-radio-button mx-2 my-2">
@@ -300,7 +300,7 @@
                                         class="d-flex justify-content-start align-items-start flex-column"
                                         color="primary"
                                         formControlName="isWeb">
-                                        <mat-radio-button [value]="1" class="example-radio-button mx-2 my-2">
+                                        <mat-radio-button [value]="1" [checked]="true" class="example-radio-button mx-2 my-2">
                                           ويب سايت
                                         </mat-radio-button>
                                         <mat-radio-button [value]="0" class="example-radio-button mx-2 my-2">
@@ -461,7 +461,7 @@
                                       class="d-flex justify-content-start align-items-start flex-column"
                                       color="primary"
                                       formControlName="isWeb">
-                                      <mat-radio-button [value]="1" class="example-radio-button mx-2 my-2">
+                                      <mat-radio-button [value]="1" [checked]="true" class="example-radio-button mx-2 my-2">
                                         ويب سايت
                                       </mat-radio-button>
                                       <mat-radio-button [value]="0" class="example-radio-button mx-2 my-2">
